# openfile

./: .gitignore  CMakeLists.txt  README.md
include/dbf/: DbfHeader.h  Field.h  FieldDefinition.h  Record.h  Table.h  dbf.h
include/jpg/: jpg.h
include/json/: json.h
include/las/: las.h
include/png/: png.h
include/shp/: shp.h
include/tiff/: tiff.h
source/: CMakeLists.txt
source/json/: CMakeLists.txt  JsonObject.cpp
source/shp/: CMakeLists.txt  Reader.cpp  Reader.h  Shape.cpp  ShpInternal.cpp  ShpInternal.h  ShpRecord.cpp  ShpRecord.h  Writer.cpp  Writer.h  impl.h  shp.cpp
source/shp/impl/: MultiPoint.hpp  MultiPointM.hpp  MultiPointZ.hpp  Point.hpp  PointM.hpp  PointZ.hpp  Polygon.hpp  PolygonM.hpp  PolygonZ.hpp  Polyline.hpp  PolylineM.hpp  PolylineZ.hpp
source/tiff/: CMakeLists.txt
